# Backend

./: README.md  alembic.ini  docker-compose.yml  ubro_api.postman_collection.json
Backend-Bot-master/: .env  .env-test  .gitignore  Dockerfile  SETUP.md  TEST_RESULTS.md  docker-compose-tests.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  test.py
Backend-Bot-master/admin_service/: Dockerfile  create_admin.py  init-db.sql  requirements.txt  seed_data.py  setup_roles.py
Backend-Bot-master/admin_service/admin_analytics/: admin.py  models.py
Backend-Bot-master/admin_service/admin_audit/: admin.py  models.py
Backend-Bot-master/admin_service/admin_car_photos/: admin.py  apps.py  models.py
Backend-Bot-master/admin_service/admin_cars/: admin.py  apps.py  models.py
Backend-Bot-master/admin_service/admin_chat_messages/: admin.py  apps.py  (+1 more)
Backend-Bot-master/app/: config.py  const.py  dataclass.py  db.py  decorators.py  enum.py
Backend-Bot-master/docs/: admin_guide.html  chat.html  full_api_docs.html  orders_state_machine.md  presentation_websockets_full.html  websocket_components.md  websocket_documentation.html  websocket_tasks.txt
Backend-Bot-master/migrations/: env.py
Backend-Bot-master/scripts/: api_smoke_test.py
Backend-Bot-master/tests/: __init__.py  conftest.py
Backend-Bot-master/tests_api_v1/: conftest.py  test_health.py  test_misc_groups.py  test_rides.py  test_roles.py  test_users.py
Backend-Bot-master/tests_live/: conftest.py  test_crud_verification.py  test_full_swagger.py  test_real_api.py
(+363 files in other folders)
